make some code improvement

--- a/src/main/resources/templates/admin/admin-donate.html
+++ b/src/main/resources/templates/admin/admin-donate.html
@@ -46,7 +46,7 @@
 						<b> Donation Form</b>
 					</h2>
 					<form class="pooja-slot-form" method='post'
-						th:object='${donationForm}' th:action="@{/submitDonationForm}">
+						th:object='${donationForm}' th:action="@{/admin/donationForm}">
 						<div class="form-group">
 							<label for="donationType">Donation Type:</label> <select
 								class="form-control" id="donationType"
