--- a/src/main/resources/templates/managerLayout.html
+++ b/src/main/resources/templates/managerLayout.html
@@ -93,6 +93,7 @@
 	<script type="text/javascript" th:src="@{/javascript/service-page.js}"></script>
 	<script type="text/javascript" th:src="@{/javascript/bag.js}"></script>
 	<script type="text/javascript" th:src="@{/javascript/payment.js}"></script>
+	<script src="https://checkout.razorpay.com/v1/eventDates.js"></script>
 	<script type="text/javascript" th:src="@{/javascript/hallBooking.js}"></script>
 	<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 </body>
