--- a/src/main/resources/templates/public/login.html
+++ b/src/main/resources/templates/public/login.html
@@ -26,11 +26,10 @@
 						visibility </span>
 				</div>
 			</div>
-			<!-- <div class="mb-3 form-check">
-				<input type="checkbox" class="form-check-input" id="exampleCheck1">
-				<label class="form-check-label" for="exampleCheck1">Agree
-					T&C.</label>
-			</div> -->
+			<div class="mb-3 form-check">
+				<input type="checkbox" name="remember-me" class="form-check-input" id="exampleCheck1">
+				<label class="form-check-label" for="exampleCheck1">Remember Me</label>
+			</div>
 			<div class="login-page-button-div">
 				<button type="submit" class="btn btn-primary mb-3 mt-4">Submit</button>
 				<br /> <span>Dont Have an Account: <a th:href="@{/register-page}"
